# ai-tester

./: README.md  main.py  pyproject.toml
Gemini/: Imagen.py  MultiModalReader.py  __init__.py  nano_banana_image.py  text_response.py
ImageTools/: __init__.py
Ollama/: __init__.py
OllamaClient/: __init__.py
OpenAICompatibleAPI/: __init__.py
tests/: gemini.py  gemini_image_read.py  ollama.py  ollama_tx_and _vl.py  openrouter_test.py  test_example_one.py  test_one.py
tools/: debugger.py  some prompts
